codex-rs/tui/src/context_profiler/snapshots/codex_tui__context_profiler__view__tests__invalidated_dropped_events.snap
---
source: tui/src/context_profiler/card_tests.rs
expression: "render(profiler.state(), 80)"
---
/ctx

╭──────────────────────────────────────────────────────╮
│ ⚠ Context breakdown incomplete                       │
│ 3 app-server events were dropped                     │
│ Attribution unavailable for the rest of this session │
│ See /status for current usage                        │
╰──────────────────────────────────────────────────────╯
