codex-rs/tui/src/context_profiler/snapshots/codex_tui__context_profiler__view__tests__narrow_40_columns.snap
---
source: tui/src/context_profiler/card_tests.rs
expression: "render(&normal_state(), 40)"
---
/ctx

╭──────────────────────────────────────╮
│ Context  23,000 / 272,000   96% rem… │
│                                      │
│ Startup context              ~19,982 │
│   instructions                  ~227 │
│   system + tools baseline …  ~19,755 │
│   ↳ measured: first request = 20,000 │
│     input tokens                     │
│                                      │
│ Attributed to items share of context │
│   Agent messages        ~1,156    5% │
│   Tool outputs             800    3% │
│   Tool calls              ~573    2% │
│   Instructions            ~227    1% │
│   Reasoning                ~71    0% │
│   User messages            ~34    0% │
│ ──────────────────────────────────── │
│   total                 ~2,861       │
│                                      │
│   System + tools bas…  ~19,755   86% │
│   Reconciliation dri…     ~384    2% │
│ ──────────────────────────────────── │
│   Reported context      23,000  100% │
│                                      │
│ Largest contributors (estimated)     │
│   1  Tool calls      …  ~1,373    6% │
│   2  Agent messages  …    ~756    3% │
│   3  Agent messages  …     400    2% │
│                                      │
│ Last 2 turns   added  context        │
│   2           +2,200   23,000        │
│   1                —   20,800        │
╰──────────────────────────────────────╯
