codex-rs/tui/src/context_profiler/snapshots/codex_tui__context_profiler__view__tests__narrow_48_columns.snap
---
source: tui/src/context_profiler/card_tests.rs
expression: "render(&normal_state(), 48)"
---
/ctx

╭──────────────────────────────────────────────╮
│ Context  23,000 / 272,000   96% remaining    │
│                                              │
│ Startup context                      ~19,982 │
│   instructions                          ~227 │
│   system + tools baseline (reconci…  ~19,755 │
│   ↳ measured: first request = 20,000 input … │
│                                              │
│ Attributed to items     share of context     │
│   Agent messages            ~1,156    5%  ██ │
│   Tool outputs                 800    3%  █  │
│   Tool calls                  ~573    2%  █  │
│   Instructions                ~227    1%  █  │
│   Reasoning                    ~71    0%     │
│   User messages                ~34    0%     │
│ ────────────────────────────────────────     │
│   total                     ~2,861           │
│                                              │
│   System + tools baseline  ~19,755   86%     │
│   Reconciliation drift        ~384    2%     │
│ ────────────────────────────────────────     │
│   Reported context          23,000  100%     │
│                                              │
│ Largest contributors (estimated)             │
│   1  Tool calls      read_file  ~1,373    6% │
│   2  Agent messages  assistan…    ~756    3% │
│   3  Agent messages  assistan…     400    2% │
│                                              │
│ Last 2 turns   added  context                │
│   2           +2,200   23,000                │
│   1                —   20,800                │
╰──────────────────────────────────────────────╯
