codex-rs/tui/src/context_profiler/snapshots/codex_tui__context_profiler__view__tests__no_data.snap
---
source: tui/src/context_profiler/card_tests.rs
expression: "render(profiler.state(), 80)"
---
/ctx

╭───────────────────────────────────────────────────╮
│ Context profiler has no data for this thread yet. │
╰───────────────────────────────────────────────────╯
